# MiniRTB

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  TODO.md
configs/campaigns/: campaigns.json
src/common/include/minirtb/storage/: vector.hpp
src/domain/include/minirtb/domain/: campaign.hpp
tests/: test_vector_manual.cpp
tools/json_demo/: CMakeLists.txt
tools/json_demo/src/: main.cpp
